Fix Java 9 options duplication handling